--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Objective: The goal of this project is to design and develop a responsive landing page using HTML and CSS for a fictional product or service. 
+The page should be visually appealing, mobile-friendly, and structured to provide a great user experience. -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
