--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!-- Objective: The goal of this project is to design and develop a responsive landing page using HTML and CSS for a fictional product or service. 
-The page should be visually appealing, mobile-friendly, and structured to provide a great user experience. -->
+<!-- Objective: The goal of this project is to design and develop a responsive landing page using HTML and CSS for a fictional product or service. The page should be visually appealing, mobile-friendly, and structured to provide a great user experience. -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -131,14 +130,16 @@ The page should be visually appealing, mobile-friendly, and structured to provid
             <div class="index-about-text">
               <h3>A BIT ABOUT ME</h3>
               <p>
-                Currently an Administrator at the West African Management
-                Development Institutes Network (WAMDEVIN), ASCON, and a student
-                of Public Administration.
+                I am currently an Administrator at the West African Management
+                Development Institutes Network (WAMDEVIN), Administrative Staff
+                College of Nigeria (ASCON), and a student of Public
+                Administration.
               </p>
               <p>
-                Proficient in graphic design and leveraging AI to enhance public
-                service. Expanding expertise in software development and
-                integrating technology to create impactful solutions.
+                Proficient in graphic design use of Artificial Intelligence to
+                enhancing public service while expanding expertise in software
+                development and integrating technology to create impactful
+                solutions.
               </p>
               <a href="#" class="cta-btn">Get to know me</a>
             </div>
